--- a/feature-governance-impl/src/main/res/layout/item_referenda_placeholder.xml
+++ b/feature-governance-impl/src/main/res/layout/item_referenda_placeholder.xml
@@ -5,10 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
+    android:layout_marginHorizontal="16dp"
     android:paddingBottom="16dp">
 
     <LinearLayout
-        android:id="@+id/itemCrowdloanGroupPlaceholder"
+        android:id="@+id/itemReferendaGroupPlaceholder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -42,15 +43,15 @@
     </LinearLayout>
 
     <io.novafoundation.nova.common.view.PlaceholderView
-        android:id="@+id/crowdloanPlaceholder"
+        android:id="@+id/referendaPlaceholder"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="16dp"
-        android:text="@string/crowdloan_empty_message_v2_2_0"
+        android:text="@string/referenda_list_placeholder"
         app:image="@drawable/ic_placeholder"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/itemCrowdloanGroupPlaceholder" />
+        app:layout_constraintTop_toBottomOf="@+id/itemReferendaGroupPlaceholder" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
