--- a/feature-assets/src/main/res/layout/fragment_manage_chain_tokens.xml
+++ b/feature-assets/src/main/res/layout/fragment_manage_chain_tokens.xml
@@ -1,66 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:background="@color/black">
 
     <View
         android:id="@+id/view"
-        style="@style/Widget.Nova.Puller"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_gravity="center_horizontal"
+        style="@style/Widget.Nova.Puller" />
 
-    <ImageView
-        android:id="@+id/manageChainTokenIcon"
-        style="@style/Widget.Nova.AssetIcon.Light"
-        android:layout_marginStart="12dp"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
         android:layout_marginTop="7dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view"
-        tools:src="@drawable/ic_nova" />
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/manageChainTokenSymbol"
-        style="@style/TextAppearance.NovaFoundation.SemiBold.Body"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toEndOf="@+id/manageChainTokenIcon"
-        app:layout_constraintTop_toTopOf="@+id/manageChainTokenIcon"
-        tools:text="KSM" />
+        <ImageView
+            android:id="@+id/manageChainTokenIcon"
+            style="@style/Widget.Nova.AssetIcon.Light"
+            android:layout_marginStart="12dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view"
+            tools:src="@drawable/ic_nova" />
 
+        <LinearLayout
+            android:layout_marginStart="12dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/manageChainTokenSubtitle"
-        style="@style/TextAppearance.NovaFoundation.Regular.Footnote"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/white_48"
-        app:layout_constraintStart_toStartOf="@+id/manageChainTokenSymbol"
-        app:layout_constraintTop_toBottomOf="@+id/manageChainTokenSymbol"
-        tools:text="All networks" />
+            <TextView
+                android:id="@+id/manageChainTokenSymbol"
+                style="@style/TextAppearance.NovaFoundation.SemiBold.Body"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                tools:text="KSM" />
+
+            <TextView
+                android:id="@+id/manageChainTokenSubtitle"
+                style="@style/TextAppearance.NovaFoundation.Regular.Footnote"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white_48"
+                tools:text="All networks" />
+        </LinearLayout>
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/manageChainTokenChains"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:layout_marginTop="4dp"
         android:layout_marginBottom="4dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/headerBottomBarrier"
         tools:listitem="@layout/item_manage_chain_token" />
-
-    <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/headerBottomBarrier"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:barrierDirection="bottom"
-        app:constraint_referenced_ids="manageChainTokenIcon,manageChainTokenSubtitle" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
