--- a/feature-staking-impl/src/main/res/layout/item_dashboard_no_stake.xml
+++ b/feature-staking-impl/src/main/res/layout/item_dashboard_no_stake.xml
@@ -31,12 +31,28 @@
             android:layout_marginStart="12dp"
             android:layout_marginEnd="16dp"
             app:layout_constrainedWidth="true"
-            app:layout_constraintBottom_toBottomOf="@+id/itemDashboardNoStakeChainIcon"
+            app:layout_constraintBottom_toTopOf="@+id/itemDashboardNoStakeChainAvailableBalance"
             app:layout_constraintEnd_toEndOf="@+id/itemDashboardNoStakeRightBarrier"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toEndOf="@+id/itemDashboardNoStakeChainIcon"
-            app:layout_constraintTop_toTopOf="@+id/itemDashboardNoStakeChainIcon"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed"
             tools:text="Polkadot" />
+
+        <TextView
+            android:id="@+id/itemDashboardNoStakeChainAvailableBalance"
+            style="@style/TextAppearance.NovaFoundation.Regular.Caption1.Secondary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constrainedWidth="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/itemDashboardNoStakeRightBarrier"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintStart_toEndOf="@+id/itemDashboardNoStakeChainIcon"
+            app:layout_constraintTop_toBottomOf="@+id/itemDashboardNoStakeChainName"
+            tools:text="Available: 105 WND" />
 
         <TextView
             android:id="@+id/itemDashboardNoStakeEarnings"
